update some tests and input defense